istio/frontend-v2.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-v2
  namespace: ecommerce-helm
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: ecommerce-production-platform
    version: v2

spec:
  replicas: 1

  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
      version: v2

  template:
    metadata:
      labels:
        app.kubernetes.io/name: frontend
        app.kubernetes.io/part-of: ecommerce-production-platform
        version: v2

    spec:
      serviceAccountName: ecommerce-sa

      imagePullSecrets:
      - name: ecr-registry-credentials

      containers:
      - name: frontend

        image: 324352301255.dkr.ecr.ap-south-1.amazonaws.com/ecommerce/frontend:84cb43cd75e99909beb830524b3688eda5535871

        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 8080

        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi

        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10

        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20

        startupProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 30
