istio/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: ecommerce:apps/Deployment:ecommerce-helm/frontend
    deployment.kubernetes.io/revision: "18"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"ecommerce:apps/Deployment:ecommerce-helm/frontend"},"labels":{"app.kubernetes.io/name":"frontend","app.kubernetes.io/part-of":"ecommerce-production-platform"},"name":"frontend","namespace":"ecommerce-helm"},"spec":{"replicas":1,"selector":{"matchLabels":{"app.kubernetes.io/name":"frontend"}},"strategy":{"rollingUpdate":{"maxSurge":1,"maxUnavailable":0},"type":"RollingUpdate"},"template" [...]
    meta.helm.sh/release-name: ecommerce
    meta.helm.sh/release-namespace: ecommerce-helm
  creationTimestamp: "2026-07-28T09:22:18Z"
  generation: 18
  labels:
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: ecommerce-production-platform
  name: frontend
  namespace: ecommerce-helm
  resourceVersion: "45089"
  uid: d824a523-11a4-4504-8830-3b3e88304b47
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-07-29T13:57:01Z"
      labels:
        app.kubernetes.io/name: frontend
        app.kubernetes.io/part-of: ecommerce-production-platform
    spec:
      containers:
      - env:
        - name: PORT
          value: "8080"
        - name: LISTEN_ADDR
          value: 0.0.0.0
        - name: ENABLE_TRACING
          value: "1"
        - name: OTEL_EXPORTER_OTLP_ENDPOINT
          value: http://otel-collector-opentelemetry-collector.opentelemetry.svc.cluster.local:4318
        - name: OTEL_EXPORTER_OTLP_PROTOCOL
          value: http/protobuf
        - name: COLLECTOR_SERVICE_ADDR
          value: otel-collector-opentelemetry-collector.opentelemetry.svc.cluster.local:4317
        - name: ENABLE_PROFILER
          value: "0"
        - name: ENABLE_ASSISTANT
          value: "false"
        - name: PRODUCT_CATALOG_SERVICE_ADDR
          value: productcatalogservice:3550
        - name: CURRENCY_SERVICE_ADDR
          value: currencyservice:7000
        - name: CART_SERVICE_ADDR
          value: cartservice:7070
        - name: RECOMMENDATION_SERVICE_ADDR
          value: recommendationservice:8080
        - name: CHECKOUT_SERVICE_ADDR
          value: checkoutservice:5050
        - name: SHIPPING_SERVICE_ADDR
          value: shippingservice:50051
        - name: AD_SERVICE_ADDR
          value: adservice:9555
        - name: SHOPPING_ASSISTANT_SERVICE_ADDR
          value: shoppingassistantservice:8080
        image: 324352301255.dkr.ecr.ap-south-1.amazonaws.com/ecommerce/frontend:84cb43cd75e99909beb830524b3688eda5535871
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 15
          periodSeconds: 20
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 1
        name: frontend
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: false
          runAsNonRoot: true
          runAsUser: 1000
        startupProbe:
          failureThreshold: 30
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 1
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: ecr-registry-credentials
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: ecommerce-sa
      serviceAccountName: ecommerce-sa
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-07-29T07:07:44Z"
    lastUpdateTime: "2026-07-29T07:07:44Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-07-29T09:28:20Z"
    lastUpdateTime: "2026-07-29T13:57:13Z"
    message: ReplicaSet "frontend-54b7f6b468" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 18
  readyReplicas: 1
  replicas: 1
  terminatingReplicas: 0
  updatedReplicas: 1
