istio/fault-injection.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: frontend-fault
  namespace: ecommerce-helm
spec:
  hosts:
  - frontend

  http:
  - fault:
      delay:
        percentage:
          value: 20
        fixedDelay: 5s

    route:
    - destination:
        host: frontend
